--- a/ansible/play.yml
+++ b/ansible/play.yml
@@ -1,23 +1,35 @@
 ---
-- name: Install Hopebilling on CentOS 8 host
+- name: Ensure Python is in place
   hosts: hopebilling
   gather_facts: no
-  vars:
-    percona_repo_url: https://repo.percona.com/yum/percona-release-latest.noarch.rpm
-    percona_release: ps80
-    remi_repo_url: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
-    remi_release: php74
+  strategy: linear
   tasks:
-    - debug:
-        msg: ZHOPA
-    - name: Adding Percona repo
-      dnf:
-        name: "{{ percona_repo_url }}"
-        state: present
-    - name: Adding REMI repo
-      dnf:
-        name: "{{ remi_repo_url }}"
-        state: present
+    - raw: dnf -y install python38
+
+# - name: Install Hopebilling on CentOS 8 host
+#   hosts: hopebilling
+#   gather_facts: no
+#   vars:
+#     percona_repo_url: https://repo.percona.com/yum/percona-release-latest.noarch.rpm
+#     percona_release: ps80
+#     remi_repo_url: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
+#     remi_release: php74
+#   tasks:
+#     - debug:
+#         msg: ZHOPA
+#     - name: Ensure Python is in place
+#       raw: dnf install python38
+
+    # - name: Adding Percona repo
+    #   dnf:
+    #     name: "{{ percona_repo_url }}"
+    #     state: present
+    # - name: Adding REMI repo
+    #   dnf:
+    #     name: "{{ remi_repo_url }}"
+    #     state: present
+
+
         #    - name: Add REMI repo
 #    - name: Add REMI repo GPG key
 #    - name: Install Percona MySQL
