--- a/ansible/play.yml
+++ b/ansible/play.yml
@@ -6,28 +6,23 @@
   tasks:
     - raw: dnf -y install python38
 
-# - name: Install Hopebilling on CentOS 8 host
-#   hosts: hopebilling
-#   gather_facts: no
-#   vars:
-#     percona_repo_url: https://repo.percona.com/yum/percona-release-latest.noarch.rpm
-#     percona_release: ps80
-#     remi_repo_url: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
-#     remi_release: php74
-#   tasks:
-#     - debug:
-#         msg: ZHOPA
-#     - name: Ensure Python is in place
-#       raw: dnf install python38
-
-    # - name: Adding Percona repo
-    #   dnf:
-    #     name: "{{ percona_repo_url }}"
-    #     state: present
-    # - name: Adding REMI repo
-    #   dnf:
-    #     name: "{{ remi_repo_url }}"
-    #     state: present
+- name: Install Hopebilling on CentOS 8 host
+  hosts: hopebilling
+  gather_facts: no
+  vars:
+    percona_repo_url: https://repo.percona.com/yum/percona-release-latest.noarch.rpm
+    percona_mysql_release: ps80
+    remi_repo_url: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
+    remi_php_release: php74
+  tasks:
+    - name: Adding Percona repo
+      dnf:
+        name: "{{ percona_repo_url }}"
+        state: present
+    - name: Adding REMI repo
+      dnf:
+        name: "{{ remi_repo_url }}"
+        state: present
 
 
         #    - name: Add REMI repo
