--- a/ansible/play.yml
+++ b/ansible/play.yml
@@ -4,7 +4,7 @@
   gather_facts: no
   strategy: linear
   tasks:
-    - raw: dnf -y install python38
+    - raw: dnf -y install python38 python3-dnf
     - raw: alternatives --set python /usr/bin/python3
 
 - name: Install Hopebilling on CentOS 8 host
