--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,7 +6,7 @@ gathering = smart
 host_key_checking = False
 module_name = shell
 remote_user = root
-# vault_password_file = ~/.ansible/vault_password
+vault_password_file = ~/.ansible/vault_password
 nocows = 1
 callback_whitelist = profile_tasks
 stdout_callback = yaml
