--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -32,7 +32,7 @@
         unit: httpd
         state: started
         enabled: yes
- 
+
     - name: Adding Percona repos
       dnf:
         name: "{{ percona_release_url }}"
@@ -96,21 +96,27 @@
         content: <?php phpinfo(); ?>
         dest: /var/www/html/info.php
         group: apache
-        owner: apache        
+        owner: apache
+
+    - name: Remembering HopeBilling host name and IP address
+      set_fact:
+        hopebilling_hostname: "{{ ansible_nodename }}"
+        hopebilling_ip: "{{ ansible_default_ipv4.address }}"
 
   handlers:
     - name: Restart MySQL
       systemd:
         unit: mysqld
-        state: restarted 
+        state: restarted
 
 - name: Create virtual host for HopeBilling on nginx reverse proxy
   hosts: proxy
+  gather_facts: no
   tasks:
     - name: Generating virtual host configuration
       template:
         src: hopebilling.conf.j2
-        dest: /etc/nginx/sites-available/{{ ansible_nodename }}
+        dest: /etc/nginx/sites-available/{{ hopebilling_hostname }}
 ####### В темплейт нужно подсовывать факты от хоста с биллингом, а для названия сертификата брать нулевой элемент массива из днс серч
     # - name: Generating virutal host configuration
     # - name: Creating Debian-style symlink с чеком -- если норм, то нотифаем релоад нджинкса 
