--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -37,13 +37,13 @@
       dnf:
         name: "{{ percona_release_url }}"
         state: present
-    - name: Enabling Percona MySQL server 8.0 repo
+    - name: Enabling Percona MySQL server {{ percona_mysql_release }} repo
       command: percona-release setup -y {{ percona_mysql_release }}
-    - name: Installing Percona MySQL server 8.0
+    - name: Installing Percona MySQL server
       dnf:
         name: percona-server-server
         state: present
-    - name: Enabling and starting Percona MySQL server 8.0 for the first time to get generated root password
+    - name: Enabling and starting Percona MySQL server for the first time to get generated root password
       systemd:
         unit: mysqld
         state: started
@@ -72,11 +72,11 @@
       dnf:
         name: "{{ remi_release_url }}"
         state: present
-    - name: Enabling remi-7.4 stream of dnf php module
+    - name: Enabling remi-{{ remi_php_release }} stream of dnf php module
       shell: dnf module reset -y php && dnf module install -y php:remi-{{ remi_php_release }} warn=False
-    - name: Installing PHP 7.4 and required modules
+    - name: Installing PHP {{ remi_php_release }} and required modules
       debug:
-        msg: Installing PHP 7.4 and required modules
+        msg: Installing PHP {{ remi_php_release }} and required modules
 
 
     - name: Ensure unzip is in place
@@ -98,11 +98,6 @@
         group: apache
         owner: apache
 
-    - name: Remembering HopeBilling host name and IP address
-      set_fact:
-        hopebilling_hostname: "{{ ansible_nodename }}"
-        hopebilling_ip: "{{ ansible_default_ipv4.address }}"
-
   handlers:
     - name: Restart MySQL
       systemd:
@@ -116,10 +111,13 @@
     - name: Generating virtual host configuration
       template:
         src: hopebilling.conf.j2
-        dest: /etc/nginx/sites-available/{{ hopebilling_hostname }}
-####### В темплейт нужно подсовывать факты от хоста с биллингом, а для названия сертификата брать нулевой элемент массива из днс серч
-    # - name: Generating virutal host configuration
-    # - name: Creating Debian-style symlink с чеком -- если норм, то нотифаем релоад нджинкса 
+        dest: /etc/nginx/sites-available/{{ hostvars[groups['hopebilling'] | first]['ansible_nodename'] }}
+    - name: Creating Debian-style symlink
+      file:
+        src: /etc/nginx/sites-available/{{ hostvars[groups['hopebilling'] | first]['ansible_nodename'] }}
+        dest: /etc/nginx/sites-enabled/{{ hostvars[groups['hopebilling'] | first]['ansible_nodename'] }}
+        state: link
+      
   handlers:
     - name: Reload nginx
       systemd:
