--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -108,10 +108,11 @@
   hosts: proxy
   gather_facts: no
   tasks:
-    - name: Generating virtual host configuration
-      template:
-        src: hopebilling.conf.j2
-        dest: /etc/nginx/sites-available/{{ hostvars[groups['hopebilling'] | first]['ansible_nodename'] }}
+    # - name: Generating virtual host configuration
+    #   template:
+    #     src: hopebilling.conf.j2
+    #     dest: /etc/nginx/sites-available/{{ hostvars[groups['hopebilling'] | first]['ansible_nodename'] }}
+    #   notify: Reload nginx
     - name: Creating Debian-style symlink
       file:
         src: /etc/nginx/sites-available/{{ hostvars[groups['hopebilling'] | first]['ansible_nodename'] }}
