--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -109,11 +109,10 @@
         state: link
         force: yes
     - name: Enabling short_open_tag in php.ini
-      ini_file:
+      lineinfile:
         path: /etc/php.ini
-        section: PHP
-        option: short_open_tag
-        value: "On"
+        regexp: '^short_open_tag'
+        state: absent
       notify: Restart Apache2
     - name: Adding info.php for debug
       copy:
