--- a/ansible/files/httpd.conf
+++ b/ansible/files/httpd.conf
@@ -1,7 +1,7 @@
 ServerTokens Prod
 <VirtualHost _default_:80>
     DocumentRoot "/var/www/hopebilling-master"
-    <Directory "/var/www/hopebilling">
+    <Directory "/var/www/hopebilling-master">
         Options FollowSymLinks
         AllowOverride All
         Require all granted
