--- a/ansible/files/httpd.conf
+++ b/ansible/files/httpd.conf
@@ -1,9 +1,15 @@
 ServerTokens Prod
-<VirtualHost _default_:80>
-    DocumentRoot "/var/www/hopebilling-master"
-    <Directory "/var/www/hopebilling-master">
-        Options FollowSymLinks
-        AllowOverride All
-        Require all granted
-    </Directory>
-</VirtualHost>
+# <VirtualHost _default_:80>
+#     DocumentRoot "/var/www/hopebilling-master"
+#     <Directory "/var/www/hopebilling-master">
+#         Options FollowSymLinks
+#         AllowOverride All
+#         Require all granted
+#     </Directory>
+# </VirtualHost>
+
+<Directory "/var/www/html">
+    # Options FollowSymLinks
+    AllowOverride All
+    # Require all granted
+</Directory>
