--- a/ansible/playbook-centos8.yml
+++ b/ansible/playbook-centos8.yml
@@ -109,16 +109,16 @@
       copy:
         content: ''
         dest: /var/www/hopebilling-master/app/config/global.config
-    - name: Setting required permissions
-      file:
-        path: /var/www/hopebilling-master/{{ item }}
-        mode: a+w
-      with_items:
-        - app/config
-        - app/config/global.config
-        - app/config/payments.config
-        - app/config/sms-gateway.config
-        - storage
+    # - name: Setting required permissions
+    #   file:
+    #     path: /var/www/hopebilling-master/{{ item }}
+    #     mode: a+w
+    #   with_items:
+    #     - app/config
+    #     - app/config/global.config
+    #     - app/config/payments.config
+    #     - app/config/sms-gateway.config
+    #     - storage
     - name: Updating Apache2 config to allow .htaccess
       replace:
         path: /etc/httpd/conf/httpd.conf
@@ -137,12 +137,12 @@
         regexp: '^short_open_tag'
         state: absent
       notify: Restarting Apache2
-    # - name: Adding info.php for debug
-    #   copy:
-    #     content: <?php phpinfo(); ?>
-    #     dest: /var/www/html/info.php
-    #     group: apache
-    #     owner: apache
+    - name: Adding info.php for debug
+      copy:
+        content: <?php phpinfo(); ?>
+        dest: /var/www/html/info.php
+        group: apache
+        owner: apache
 
   handlers:
     - name: Restarting Apache2
