--- a/ansible/playbook-centos8.yml
+++ b/ansible/playbook-centos8.yml
@@ -112,6 +112,7 @@
         keep_newer: yes
         group: apache
         owner: apache
+        creates: /var/www/hopebilling-master
       register: unarchive_skipped
     - debug:
         var: unarchive_skipped
