--- a/ansible/playbook-centos8.yml
+++ b/ansible/playbook-centos8.yml
@@ -113,13 +113,14 @@
         group: apache
         owner: apache
         creates: /var/www/hopebilling-master
-      register: unarchive_skipped
+      register: unarchive
     - debug:
-        var: unarchive_skipped
+        var: unarchive
     - name: Weird fix for weird thing
       copy:
         content: ''
         dest: /var/www/hopebilling-master/app/config/global.config
+      when: not unarchive.skipped
     - name: Some SELinux magic
       command: chcon -t httpd_sys_content_t /var/www/html -R
     - name: Some more SELinux magic
