--- a/ansible/playbook-centos8.yml
+++ b/ansible/playbook-centos8.yml
@@ -120,7 +120,7 @@
       copy:
         content: ''
         dest: /var/www/hopebilling-master/app/config/global.config
-      when: not unarchive.skipped
+      when: unarchive.skipped is defined
     - name: Some SELinux magic
       command: chcon -t httpd_sys_content_t /var/www/html -R
     - name: Some more SELinux magic
